--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
+.header {
   text-align: center;
+  font-size: 3rem;
+  margin-top: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.card-container {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 20px;
+}
+
+.card {
+  width: 600px;
+  box-shadow: 0 10px 10px lightGrey;
+}
+
+.card-container span {
+  font-weight: bold;
+  text-transform: capitalize;
+}
+
+.read-more {
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.read-more:visited {
+  color: blue;
+}
+
+.search-bar {
+  width: 100%;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-block: 30px;
 }
 
-.App-link {
-  color: #61dafb;
+.pagination {
+  display: flex;
+  justify-content: center;
+  margin-block: 40px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.loader {
+  display: flex;
+  justify-content: center;
 }
